2000-05-08 22:34:24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-list-cached): Don't use
	`subst-char-in-string'.
	
2000-05-08  Dave Love  <fx@gnu.org>

	* pop3.el (pop3-open-server): Fix creating name of trace buffer.

2000-05-08 01:07:47  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-interactively-view-part): Append %s if the
	method is a single word.
	* nnwarchive.el (nnwarchive-type-definition): Typo.

2000-05-07 17:24:01  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-prepare-flat-list-dead-predicate): New
	function.
	(gnus-group-prepare-flat-predicate): Use it.
	(gnus-group-list-cached): List dead groups.

2000-05-07 10:50:02  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-decode-charset): Don't decode message with
	format.

2000-05-07  Florian Weimer  <fw@deneb.cygnus.argh.org>

	* mailcap.el (mailcap-maybe-eval): Honor user request not to
	evaluate the Lisp code.

2000-05-06 17:40:20  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-wash-html): New function.
	(gnus-article-wash-html): Bind.
	(gnus-article-make-menu-bar): Menu item.
	* gnus-sum.el (gnus-summary-wash-map): Bind 'h'.
	(gnus-summary-make-menu-bar): Menu item.
	* gnus.el: Autoload.

2000-05-06  Florian Weimer  <fw@deneb.cygnus.argh.org>

	* gnus-uu.el (gnus-uu-unshar-warning): New variable.
	(gnus-uu-unshar-article): Use it.

	* mailcap.el (mailcap-maybe-eval-warning): New variable.
	(mailcap-maybe-eval): Use it.

	* gnus-msg.el (gnus-group-posting-charset-alist): Speling mistake
	in docstring.

	* mml.el (mml-generate-mime-1): Small comment.

2000-05-05 12:27:53  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-de-base64-unreadable): New function.
	(gnus-article-de-base64-unreadable): Bind.
	(gnus-article-make-menu-bar): Menu item.
	* gnus-sum.el (gnus-summary-wash-map): Bind '6' and 'Z'.
	(gnus-summary-make-menu-bar): Menu item.
	* gnus.el: Autoload.
