@@ -632,7 +632,10 @@ external if displayed external."
     (save-excursion
       (if (member (mm-handle-media-supertype handle) '("text" "message"))
 	  (with-temp-buffer
-	    (if (eq (mm-handle-encoding handle) '8bit)
+	    (if (eq (or (mm-handle-encoding handle)
+			(with-current-buffer (mm-handle-buffer handle)
+			  (mm-body-7-or-8)))
+		    '8bit)
 		;; Emacs MULE can not handle some 8bit characters in 
 		;; multibyte character!!
 		(let ((text (with-current-buffer 
